# feral

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  batch_jobs.sh  data.py  dataset.py  distributed_train.py  generate_raster_plot.ipynb  inference_folder.py  layers_internvideo.py  loops.py  metrics.py  model.py  modeling.py  new_new_dataset.py  prof.sh  profile_train.py  pyproject.toml  reencode_videos.py  requirements.txt  run.py  sample_vjepa21.py  test_docker.py  tests.py  todo.txt  train.py  train_default_cfg.py  utils.py
InternVideo2/single_modality/: run_linear_probing.py  run_linear_probing_simple.py  utils.py
configs/: cfg.yaml  default_vjepa.yaml  profile.yaml  tst.json
configs/ahen/: ants_dominic.yaml  mosquitos.yaml
configs/backbones_and_freezing/: calms_videoprism_base.yaml  calms_videoprism_large.yaml  (+4 more)
feral/: .gitignore  README.md  __init__.py  backbones.py  cli.py  data.py  dataset.py  default_config.yaml  inference_folder.py  loops.py  metrics.py  model.py  modeling.py  new_dataset.py  new_new_dataset.py  phone_aug.py  preproc_ffmpeg.py  preprocess_datset.py  preprocess_datset_new.py  presets.py  reencode_videos.py  requirements.txt  run.py  speedup.ipynb  train.py  utils.py
ferral/: README.md  cfg.yaml  dataset.py  metrics.py  model.py  run.sh  train.py  utils.py
legacy/: preprocess_datset.py
tests/: generate_synthetic_dataset.py  test_backbones.py  test_dataset.py  test_frame_ids.py  test_inference_folder.py  test_loops.py  test_metrics.py  test_presets.py  test_reencode.py  test_regression.py  test_smoke.py  test_utils.py  tests.py
(+137 files in other folders)
